--- a/src/rogu/ui/ThumbnailMessageItemBody/index.scss
+++ b/src/rogu/ui/ThumbnailMessageItemBody/index.scss
@@ -7,8 +7,12 @@
   overflow: hidden;
   width: 100%;
   min-width: 180px;
-  height: 270px;
+  height: 150px;
   border-radius: 6px;
+
+  @include sm {
+    height: 270px;
+  }
 
   &.reactions {
     border-radius: 6px 6px 0 0;
@@ -32,7 +36,7 @@
   .rogu-thumbnail-message-item-body__placeholder {
     position: absolute;
     width: 100%;
-    height: 270px;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -53,20 +57,21 @@
     top: 0;
     display: none;
     width: 100%;
-    height: 270px;
+    height: 100%;
     background-color: var(--sendbird-light-overlay-01);
   }
 
   .rogu-thumbnail-message-item-body__video {
     position: absolute;
     width: 100%;
-    height: 270px;
+    height: 100%;
+    object-fit: cover;
   }
 
   .rogu-thumbnail-message-item-body__icon-wrapper {
     position: absolute;
     width: 100%;
-    height: 270px;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
